--- a/Swallow/app/build.gradle
+++ b/Swallow/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile project(':core')
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
