--- a/Swallow/app/build.gradle
+++ b/Swallow/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':ptrlibrary')
+    compile project(':easypermissions')
 }
