--- a/Swallow/settings.gradle
+++ b/Swallow/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':wishlist', ':commons', ':core', ':daogenerater'
+include ':app', ':wishlist', ':commons', ':core', ':daogenerater', ':easypermissions'
 
 include ':ptrlibrary'
